benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul.rs
Time: 2025-09-15 20:37:50

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:28:31
   |
28 |     else { base * power(base, exp - 1) }
   |                   -----       ^^^^^^^ expected `nat`, found `int`
   |                   |
   |                   arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:24:9
   |
24 | spec fn power(base: nat, exp: nat) -> nat
   |         ^^^^^            --------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:28:31
   |
28 |     else { base * power(base, exp - 1) }
   |                   -----       ^^^^^^^ expected `nat`, found `int`
   |                   |
   |                   arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:24:9
   |
24 | spec fn power(base: nat, exp: nat) -> nat
   |         ^^^^^            --------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
